--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,16 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="h1">45sp</dimen>
+    <dimen name="h2">20sp</dimen>
+    <dimen name="d1">400dp</dimen>
+    <dimen name="logo">200dp</dimen>
+
+    <dimen name="image">100dp</dimen>
+    <dimen name="icon">120dp</dimen>
+    <dimen name="price">35sp</dimen>
+    <dimen name="food">20sp</dimen>
+    <dimen name="login">150dp</dimen>
+
 </resources>
